opa-kubernetes/01-image-restriction/pod-invalid.yaml
apiVersion: v1
kind: Pod
metadata:
  name: test-busybox
  labels:
    team: devops
spec:
  containers:
    - name: busybox
      image: busybox
      command: ["sh", "-c", "sleep 3600"]
      resources:
        limits:
          cpu: "500m"
          memory: "256Mi"
        requests:
          cpu: "200m"
          memory: "128Mi"
