opa-kubernetes/01-image-restriction/image-constraint.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sAllowedImages
metadata:
  name: only-nginx-allowed
spec:
  match:
    kinds:
      - apiGroups: [""]
        kinds: ["Pod"]
